bdr.BDR.scala.error
Compilation error:
BDR:29: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(cell="C")
              ^